--- a/package.json
+++ b/package.json
@@ -12,16 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.2.0",
+    "@angular/cdk-experimental": "^6.2.1",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/flex-layout": "^6.0.0-beta.15",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.2.0",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/pwa": "^0.7.0-beta.1",
     "@angular/router": "^6.0.3",
+    "@angular/service-worker": "^6.0.3",
+    "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "firebase": "^5.0.4",
+    "hammerjs": "^2.0.8",
+    "http-server": "^0.11.1",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
