--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@angular/pwa": "^0.7.0-beta.1",
     "@angular/router": "^6.0.3",
     "@angular/service-worker": "^6.0.3",
+    "@types/lodash": "^4.14.111",
     "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.4",
     "firebase": "^5.0.4",
     "hammerjs": "^2.0.8",
     "http-server": "^0.11.1",
+    "lodash": "^4.17.10",
+    "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
