--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/pwa": "^0.7.0-beta.1",
     "@angular/router": "^6.0.3",
     "@angular/service-worker": "^6.0.3",
+    "@ng-select/ng-select": "^2.3.5",
     "@types/lodash": "^4.14.111",
     "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.4",
